[gd_scene load_steps=8 format=3 uid="uid://cext5fqor5fha"]

[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_6k5b0"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_3gxh4"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="4_edus7"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_wav46"]
[ext_resource type="Script" path="res://scripts/match_count_label.gd" id="5_71n33"]
[ext_resource type="Script" path="res://scripts/state_manager.gd" id="5_623jp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cn0ca"]
albedo_color = Color(0, 0.529412, 0.313726, 1)

[node name="World" type="Node3D"]

[node name="StateManager" type="Node" parent="."]
script = ExtResource("5_623jp")

[node name="floor" type="CSGBox3D" parent="."]
material_override = SubResource("StandardMaterial3D_cn0ca")
use_collision = true
size = Vector3(20, 0.1, 20)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.81301, 0.582251, 0, -0.582251, 0.81301, 0, 5, 4.54172)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.3975, 0.917602, 0, -0.917602, 0.3975, 0, 23.2175, 11.2776)

[node name="GameStateChart" type="Node" parent="."]
script = ExtResource("2_6k5b0")

[node name="CompoundState" type="Node" parent="GameStateChart"]
script = ExtResource("3_3gxh4")
initial_state = NodePath("Init")

[node name="Init" type="Node" parent="GameStateChart/CompoundState"]
script = ExtResource("4_wav46")

[node name="ToPlayerTurn" type="Node" parent="GameStateChart/CompoundState/Init"]
script = ExtResource("4_edus7")
to = NodePath("../../PlayerTurn")
event = &"to_player_turn"
delay_seconds = 3.0

[node name="PlayerTurn" type="Node" parent="GameStateChart/CompoundState"]
script = ExtResource("4_wav46")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MatchCountLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Matches Remaining: 0"
horizontal_alignment = 1
script = ExtResource("5_71n33")

[connection signal="match_count_changed" from="StateManager" to="CanvasLayer/MatchCountLabel" method="_on_state_manager_match_count_changed"]
[connection signal="state_entered" from="GameStateChart/CompoundState/Init" to="StateManager" method="_on_init_state_entered"]
[connection signal="state_entered" from="GameStateChart/CompoundState/PlayerTurn" to="StateManager" method="_on_player_turn_state_entered"]
